Closed Bug 1269165 Opened 10 years ago Closed 10 years ago

getUserMedia fails to enumerate ALSA plugins

Categories

(Core :: WebRTC: Audio/Video, defect)

Unspecified
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox46 --- affected
firefox47 --- fixed
firefox48 --- fixed
firefox49 --- fixed
firefox-esr38 --- affected
firefox-esr45 --- fixed
backlog parking-lot

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

(Keywords: regression)

Attachments

(2 files)

On FreeBSD there's no kernel ALSA, only plugins with OSS being default [1]. As GetDevicesInfo() started to use snd_card_next() enumerating devices no longer works. $ aplay -l aplay: device_list:273: no soundcards found... $ aplay -L null Discard all samples (playback) or generate zero samples (capture) pulse PulseAudio Sound Server oss Open Sound System $ firefox -no-remote -profile $(mktemp -d) https://mozilla.github.io/webrtc-landing/ [getUserMedia example] [Audio] ALSA lib control.c:954:(snd_ctl_open_noupdate) Invalid CTL ALSA lib control.c:954:(snd_ctl_open_noupdate) Invalid CTL ALSA lib control.c:954:(snd_ctl_open_noupdate) Invalid CTL ALSA lib pcm.c:2266:(snd_pcm_open_noupdate) Unknown PCM ALSA lib control.c:954:(snd_ctl_open_noupdate) Invalid CTL ALSA lib pcm.c:2266:(snd_pcm_open_noupdate) Unknown PCM [NotFoundError: The object can not be found here.] [1] https://svnweb.freebsd.org/ports/head/audio/alsa-lib/files/asound.conf.sample?view=markup
Attachment #8747492 - Flags: feedback?(rjesup)
Attached image workaround (screenshot)
Another workaround is to use PulseAudio but it can be either misconfigured or not installed by choice. So, very few our users have a success story with Firefox Hello. https://forums.freebsd.org/threads/50219/#post-280981
backlog: --- → parking-lot
Keywords: regression
Comment on attachment 8747492 [details] [diff] [review] Restore ALSA plugins detection on non-Linux after bug 757637 Review of attachment 8747492 [details] [diff] [review]: ----------------------------------------------------------------- Simple patch, doesn't affect mainline platforms
Attachment #8747492 - Flags: feedback?(rjesup) → review+
Attachment #8747492 - Attachment description: workaround → Restore ALSA plugins detection on non-Linux after bug 757637
Comment on attachment 8747492 [details] [diff] [review] Restore ALSA plugins detection on non-Linux after bug 757637 Approval Request Comment [Feature/regressing bug #]: bug 757637 regression, ESR stability [User impact if declined]: broken WebRTC runtime on DragonFly and FreeBSD [Describe test coverage new/current, TreeHerder]: m-i, m-c soon [Risks and why]: Low, either broken build or regressing Chromium issue 95797 [String/UUID change made/needed]: None
Attachment #8747492 - Flags: approval-mozilla-esr45?
Attachment #8747492 - Flags: approval-mozilla-beta?
Attachment #8747492 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
with regards to uplift, NPTOB effectively; this is a no-op to our directly supported platforms.
Assignee: nobody → jbeich
Comment on attachment 8747492 [details] [diff] [review] Restore ALSA plugins detection on non-Linux after bug 757637 NPOTB for shipped platforms, fixes bugs in FreeBSD and DragonFly builds, Aurora48+, Beta47+, ESR45+
Attachment #8747492 - Flags: approval-mozilla-esr45?
Attachment #8747492 - Flags: approval-mozilla-esr45+
Attachment #8747492 - Flags: approval-mozilla-beta?
Attachment #8747492 - Flags: approval-mozilla-beta+
Attachment #8747492 - Flags: approval-mozilla-aurora?
Attachment #8747492 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: