Bug 1269165 - Restore ALSA plugins detection on non-Linux after bug 757637. r=jesup a=ritu